<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/icon" />


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registration_header"
            android:textColor="@color/menuText"
            android:layout_marginTop="10dp"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/registration_header2"
            android:textColor="@color/menuText"
            android:textSize="16sp" />



            <EditText
                android:id="@+id/user_firstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/textinput"
                android:hint="@string/firstname"
                android:inputType="text" />

            <EditText
                android:id="@+id/user_lastname"
                android:layout_width="match_parent"
                android:background="@drawable/textinput"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="10dp"
                android:hint="@string/lastname"
                android:inputType="text" />


            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:background="@drawable/textinput"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="10dp"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:background="@drawable/textinput"
                android:layout_height="@dimen/edit_text_height"
                android:hint="@string/password_login"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_five"
            android:text="@string/register_text" />

    </LinearLayout>

</ScrollView>