<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".fragments.Login">




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_top"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/icon" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_header"
                    android:gravity="center"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:background="@drawable/textinput"
                    android:layout_marginTop="@dimen/margin_top"
                    android:inputType="textEmailAddress"
                    android:id="@+id/user_email"
                    android:hint="@string/email_login"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:inputType="textPassword"
                    android:background="@drawable/textinput"
                    android:layout_marginTop="@dimen/margin_top"
                    android:id="@+id/user_password"
                    android:hint="@string/password_login"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/login_button"
                android:layout_marginTop="@dimen/margin_top"
                style="@style/button"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menuText"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/forgot_password"
                android:id="@+id/forgot_password_page"
                android:layout_gravity="center"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#9e9e9e"
                    android:text="@string/request_register"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"/>
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/menuText"
                    android:id="@+id/register_page"
                    android:text="@string/register_text"
                    android:gravity="center"/>

            </LinearLayout>



        </LinearLayout>

    </FrameLayout>
</ScrollView>